--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://benluks.github.io/Patient-Form-Showcase/",
+  "homepage": "https://benluks.github.io/Patient-Form/",
   "name": "patient-form-showcase",
   "version": "0.1.0",
   "private": true,
